# cc-unpacker

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
cc_unpacker/: __init__.py  analyzer.py  cli.py  db.py  downloader.py  extractor.py
tests/: test_extractor.py
web/: QUICKSTART.md  README.md  SUMMARY.md  jobs.py  main.py  scanner.py  start.sh  unpacker.py
web/public/: index.html
