[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-unpacker"
version = "0.1.0"
description = "Claude Code Source Explorer — unpack npm source maps and analyze with AI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ibrahim", email = "ibrahim@example.com" }]
requires-python = ">=3.11"
keywords = ["npm", "source-map", "claude", "ai", "reverse-engineering", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "anthropic>=0.30",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
cc-unpacker = "cc_unpacker.cli:main"

[project.urls]
Homepage = "https://github.com/example/cc-unpacker"
"Bug Tracker" = "https://github.com/example/cc-unpacker/issues"

[tool.hatch.build.targets.wheel]
packages = ["cc_unpacker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
